--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
   <build>
     <plugins>
       <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-war-plugin</artifactId>
+         <version>2.2</version>
+      </plugin>
+
+      <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
           <source>1.8</source>
