--- a/pom.xml
+++ b/pom.xml
@@ -36,16 +36,14 @@
       <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
-         <version>2.2</version>
-      </plugin>
+         <version>3.3.1</version>
+    </plugin>
+    <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-compiler-plugin</artifactId>
+         <version>3.8.1</version>
+     </plugin>
 
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
 
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
